--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <div class="container">
             <h1>Generate a <span id="color">random password</span></h1>
             <p>Never use an insecure password again.</p>
+            <div class="button-container">
             <button id="pw-generator-btn">Generate passwords</button>
+            <button id="reset-password-btn">Reset passwords</button>
+            </div>
             <div class="line"></div>
             <div class="generated-pw-container">
                 <div class="generated-pw1-container">
