--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Karla:wght@800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <div id="icon-container">
+            <span class="material-symbols-outlined" id="container" >
+                light_mode
+            </span>
+            <!-- <span class="material-symbols-outlined" id="container2">
+                dark_mode
+                </span> -->
+        </div>
         <div class="container">
             <h1>Generate a <span id="color">random password</span></h1>
             <p>Never use an insecure password again.</p>
